Petite correction, peu élegante, du footer pour qu'il soit bien aligné

--- a/View/styles.css
+++ b/View/styles.css
@@ -562,9 +562,7 @@ h3 {
 footer {
   display: flex;
 
-  margin-left: -3vw;
-
-  width: 100vw;
+  width: 103vw;
   background-color: #f2f2f2;
   padding-top: 25px;
   padding-bottom: 25px;
@@ -593,5 +591,6 @@ footer {
 @media (max-width: 768px) {
   footer {
     flex-direction: column;
+    margin-left: -3vw;
   }
 }
